--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.21.13",
     "@prisma/client": "^4.14.1",
     "@types/node": "20.1.2",
     "@types/react": "18.2.6",
@@ -16,7 +17,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
-    "next": "13.4.1",
+    "next": "^13.4.8",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
